--- a/Drawsome/Views/Home/Index.cshtml
+++ b/Drawsome/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!DOCTYPE html>
+<html lang="eng">
+<head>
+    <title>Login</title>
+    <link rel="stylesheet" href="~/css/style.css" />
+</head>
+<body>
+<img src="~/images/DrawsomeLogo.png" alt="Drawsome Logo" class="centered-logo"/>
+<div class="login-container">
+    <h2>Login</h2>
+    <form>
+        <input type="text" placeholder="Username" />
+        <input type="password" placeholder="Password" />
+        <button type="submit">Login</button>
+    </form>
+    <p>
+        No account? <a href="/Home/Register">Make one!</a>
+    </p>
 </div>
+</body>
+</html>
