Feat: add logout button

--- a/Drawsome/Views/Home/LobbySelection.cshtml
+++ b/Drawsome/Views/Home/LobbySelection.cshtml
@@ -33,6 +33,8 @@
         <br>
         <button onclick="location.href='@Url.Action("ManageUsers", "Home")'">Manage Users</button>
     }
+    <br>
+    <button style="margin-top: 20px;" onclick="location.href='@Url.Action("Logout", "Home")'">Logout</button>
 </div>
 
 <script>
