--- a/Drawsome/Views/Home/ActiveLobby.cshtml
+++ b/Drawsome/Views/Home/ActiveLobby.cshtml
@@ -78,6 +78,7 @@
                         border: 1px solid black;
                         display: block;
                         margin-top: 10px;
+                        background-color: #fbfaf5;
                     }
                 </style>
                 <canvas id="${canvasId}" width="400" height="300"></canvas>
